--- a/Deepak.html
+++ b/Deepak.html
@@ -8,6 +8,12 @@
 <body>
   <div class="todo-container">
     <h1>To Do List</h1>
+    
+    <div class="filters">
+  <button onclick="filterTasks('all')">All</button>
+  <button onclick="filterTasks('active')">Active</button>
+  <button onclick="filterTasks('completed')">Completed</button>
+</div>
     <div class="input-group">
       <input type="text" id="taskInput" placeholder="Enter a new task...">
       <button id="addBtn">Add</button>
@@ -16,6 +22,8 @@
     <ul id="taskList"></ul>
     <div id="taskCount"></div>
   </div>
+  
+
   <script src="Script.js"></script>
 </body>
 </html>
